--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/node": "^7.20.7",
     "@babel/preset-env": "^7.20.2",
     "@babel/runtime": "^7.20.7",
+    "@types/node": "^20.4.5",
     "nodemon": "^2.0.20"
   },
   "dependencies": {
@@ -23,6 +24,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
+    "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "mongoose": "^6.8.3",
