--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
+port=3000
 ACCESS_TOKEN_SECRET=NodejsTutorial
 ACCESS_TOKEN_LIFE=10m
 REFRESH_TOKEN_LIFE=86400000
+URI_MONGODB_USERS=mongodb://127.0.0.1/Users
+URI_MONGODB_EXPRESSJS=mongodb://127.0.0.1/ExpressJS
