--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nodejs",
   "version": "1.0.0",
   "description": "",
-  "main": "src/app.js",
+  "main": "app.js",
   "scripts": {
     "start": "nodemon --exec babel-node app.js"
   },
