--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/runtime": "^7.20.7",
     "@types/node": "^20.4.5",
+    "eslint": "^8.46.0",
     "nodemon": "^2.0.20"
   },
   "dependencies": {
