--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 port=3000
 ACCESS_TOKEN_SECRET=NodejsTutorial
 ACCESS_TOKEN_LIFE=20s
-REFRESH_TOKEN_LIFE=86400000
+REFRESH_TOKEN_LIFE=7d
+REFRESH_TOKEN_LIFE_REDIS=604,800
 URI_MONGODB_USERS=mongodb://127.0.0.1/Users
 URI_MONGODB_EXPRESSJS=mongodb://127.0.0.1/ExpressJS
